[package]
name = "epicminecraftskinz"
version = "1.0.0"
authors = ["JulianGmp <23147553+JulianGmp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
clap = { version = "2.33.3", features = ["yaml"]}
